--- a/src/app.html
+++ b/src/app.html
@@ -11,7 +11,7 @@
 			href="https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100..900&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap"
 			rel="stylesheet"
 		/>
-		<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Oxanium:wght@200..800&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Oxanium:wght@200..800&display=swap" rel="stylesheet">
 
 		%sveltekit.head%
 	</head>
